--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bourbon": "^4.3.4",
     "bourbon-neat": "^1.9.0",
     "core-js": "^2.4.1",
+    "directus-sdk-javascript": "^2.7.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
