--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular-directus": "^0.2.2",
     "bourbon": "^4.3.4",
     "bourbon-neat": "^1.9.0",
     "core-js": "^2.4.1",
